Java SDK: 4.2.101: Check for null message in auto response handler; Better handling of username/password authentication failures; Moving toward fluent style of session intialization; Added session.setHttpHeader and session.setHttpHeaders. PHP SDK: 4.2.86: bug fix. Python SDK: 4.1.88 - Added session.setHttpHeader and session.setHttpHeaders.